--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="imgs/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Hangman Game</title>
-    <script defer src="/scripts/bundle.js"></script>
+    <script defer src="scripts/bundle.js"></script>
 </head>
 <body>
     <h1>Hangman</h1>
